<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F3F3F2">

    <!-- Profile Button -->

    <!-- Menu Button -->

    <!-- Title Text -->

    <!-- Main Image -->

    <ImageButton
        android:id="@+id/btnProfile"
        android:layout_width="53dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibolditalic"
        android:text="@string/let_s_live_a_healthy_live"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProfile" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="376dp"
        android:layout_height="216dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Emergency Button and Text -->
    <ImageButton
        android:id="@+id/btnEmergency"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset37"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/emergency"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnEmergency"
        app:layout_constraintStart_toStartOf="@id/btnEmergency"
        app:layout_constraintEnd_toEndOf="@id/btnEmergency" />

    <!-- Emergency Button and Text -->

    <ImageButton
        android:id="@+id/btnNews"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:layout_marginTop="136dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/News"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/bold"
        android:text="@string/news"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btnEmergency"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="@id/btnEmergency"
        app:layout_constraintTop_toBottomOf="@id/btnEmergency" />


    <!-- Consultation Button and Text -->
    <ImageButton
        android:id="@+id/btnKonsultasi"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset32"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/btnEmergency"
        app:layout_constraintEnd_toStartOf="@id/btnAbout"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Konsultasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/consultation"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnKonsultasi"
        app:layout_constraintStart_toStartOf="@id/btnKonsultasi"
        app:layout_constraintEnd_toEndOf="@id/btnKonsultasi" />
    <!-- Consultation Button and Text -->

    <ImageButton
        android:id="@+id/btnReservasi"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:layout_marginTop="136dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/reservasi"
        app:layout_constraintEnd_toStartOf="@id/btnAbout"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@id/btnEmergency"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Reservasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/bold"
        android:text="@string/reservation"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btnKonsultasi"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="@id/btnKonsultasi"
        app:layout_constraintTop_toBottomOf="@id/btnKonsultasi" />
    <!-- About Button and Text -->

    <ImageButton
        android:id="@+id/btnAbout"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/about"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btnAbout"
        app:layout_constraintStart_toStartOf="@id/btnAbout"
        app:layout_constraintTop_toBottomOf="@id/btnAbout" />

    <ImageButton
        android:id="@+id/btnDeveloper"
        android:layout_width="90dp"
        android:layout_height="117dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/asset35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/bold"
        android:text="@string/developer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btnAbout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/btnAbout"
        app:layout_constraintTop_toBottomOf="@id/btnAbout" />

    <!-- Background ImageView -->

    <!-- Home Button -->

    <ImageView
        android:id="@+id/bgnav"
        android:layout_width="417dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/asset31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- News Button -->
    <ImageButton
        android:id="@+id/newsButton"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_news"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeButton" />

    <!-- Chat Button -->
    <ImageButton
        android:id="@+id/chatButton"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/newsButton" />

    <!-- Profile Button -->
    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
